--- a/test3/configuration/_application.properties
+++ b/test3/configuration/_application.properties
@@ -1,11 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://postgres:5432/microservice
-spring.datasource.username=postgres
-spring.datasource.password=55
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:55}
 
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.default-zone=http://eureka-server:8761/eureka
+eureka.client.service-url.default-zone=${EUREKA_URI:http://eureka-server:8761/eureka}
 
 application-description=Its Done UK Application
 application-license=API Licence
